--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,15 @@
 <h2>Welcome to Pizza Shop!</h2>
-<button class="btn btn-primary">Click Me!</button>
+<button class="btn btn-primary" onClick="something()">Click Me!</button>
+
+
+
+
+
+
+
+
+<script>
+  function something() {
+    alert('Hello!');
+  }
+</script>
