--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,11 +10,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-		
+		<script src="/app.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
+    <title>Pizza Shop</title>
   </head>
 
 	<body>
@@ -26,7 +26,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+						<a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 						<a class="nav-item nav-link" href="#">Features</a>
 						<a class="nav-item nav-link" href="#">Pricing</a>
 						<a class="nav-item nav-link" href="/about">About</a>
