--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,18 @@
 
   <% @products.each do |p|%>
   <div class="col-md-3">
-    <%= p.title %>
+    <div>
+      <%= p.title %>
+    </div>
+
+    <div> 
+      <img src="<%= p.path_to_image %>" alt=""> 
+    </div>
+
+     <div> 
+      <%= p.description %>
+    </div>
+
   </div>
   <% end %>
 
