Upgrade display products

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,8 +3,8 @@
 <div class="row">
 
   <% @products.each do |p|%>
-  <div class="col-md-auto">
-    <div>
+  <div class="col-md-auto item-box">
+    <div class="title">
       <%= p.title %>
     </div>
 
