--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,700');
+
 * {
   box-sizing: border-box;
+}
+.item-box {
+  border: 1px solid black;
+  margin: 5px;
+  padding: 15px;
+}
+.title {
+  font-family: 'Work Sans', sans-serif;
+  font-size: 24px;
 }
 img {
   width: 250px;
