Display Price and size

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,12 +12,16 @@
       <img src="<%= p.path_to_image %>" alt=""> 
     </div>
 
-    <div> 
-      <%= p.price %> RUB
+     <div class="description"> 
+      <%= p.description %>
     </div>
 
-     <div> 
-      <%= p.description %>
+    <div class="price"> 
+      Price: <%= p.price %> RUB
+    </div>
+    
+    <div> 
+      Size: <%= p.size %> cm
     </div>
 
   </div>
