--- a/public/main.css
+++ b/public/main.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Work Sans', sans-serif;
 }
 .item-box {
   border: 1px solid black;
@@ -9,10 +10,12 @@
   padding: 15px;
 }
 .title {
-  font-family: 'Work Sans', sans-serif;
   font-size: 24px;
 }
 img {
   width: 250px;
   height: 200px;
+}
+.description {
+  font-size: 20px;
 }
