Add add_to_cart func stub

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,9 +19,12 @@
     <div class="price"> 
       Price: <%= p.price %> RUB
     </div>
-    
+
     <div> 
       Size: <%= p.size %> cm
+    </div>
+    <div class="item-btn">
+      <button class="btn-sm btn btn-success" onClick="add_to_cart()">Add to cart</button>
     </div>
 
   </div>
