Pass id to add_to_cart

--- a/views/index.erb
+++ b/views/index.erb
@@ -24,7 +24,7 @@
       Size: <%= p.size %> cm
     </div>
     <div class="item-btn">
-      <button class="btn-sm btn btn-success" onClick="add_to_cart()">Add to cart</button>
+      <button class="btn-sm btn btn-success" onClick="add_to_cart(<%= p.id %>)">Add to cart</button>
     </div>
 
   </div>
