Adaptive for display

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 <div class="row">
 
   <% @products.each do |p|%>
-  <div class="col-md-auto item-box">
+  <div class="col-lg-auto col-md-5 col-sm-7 col-xs-6 item-box">
     <div class="title">
       <%= p.title %>
     </div>
