--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,6 +29,7 @@
 						<a class="nav-item nav-link" href="/about">About</a>
 					</div>
 				</div>
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cart</button>
 			</nav>
 
 
