--- a/views/layout.erb
+++ b/views/layout.erb
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 				<form action="/cart" method="POST">
-					<input type="text" name="orders">
+					<input type="text" name="orders" id="orders_input">
 					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cart</button>
 				</form>
 			</nav>
