Make input hidden, update input on page reload

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="main.css">
+
+		<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+		<script src="app.js"></script>
+		
 		
 
 
@@ -30,7 +38,7 @@
 					</div>
 				</div>
 				<form action="/cart" method="POST">
-					<input type="text" name="orders" id="orders_input">
+					<input type="hidden" name="orders" id="orders_input">
 					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cart</button>
 				</form>
 			</nav>
@@ -45,15 +53,6 @@
 				<% end %>
 				<%= yield %>
 			</div>
-
-	</div>
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-		<script src="app.js"></script>
+		</div>
   </body>
 </html>
