--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,10 +15,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 		<script src="app.js"></script>
 		
-		
-
-
-
     <title>Pizza Shop</title>
   </head>
 
@@ -39,13 +35,9 @@
 				</div>
 				<form action="/cart" method="POST">
 					<input type="hidden" name="orders" id="orders_input">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Cart</button>
+					<input id="orders_btn" class="btn btn-outline-success my-2 my-sm-0" type="submit" value='Cart (...)'>
 				</form>
 			</nav>
-
-
-
-
 
 			<div>
 				<%if @error && @error.length > 0 then %>
@@ -53,6 +45,7 @@
 				<% end %>
 				<%= yield %>
 			</div>
+
 		</div>
   </body>
 </html>
